🐛 Binary polls overflow bug fix for ios safari. (#29089)
* Fixes overflow-hidden on container with border radius for ios safari.

* Remove vendor prefix. Specify transform.

--- a/extensions/amp-story/1.0/amp-story-interactive-binary-poll.css
+++ b/extensions/amp-story/1.0/amp-story-interactive-binary-poll.css
@@ -32,6 +32,8 @@
   height: 90px !important;
 	border-radius: 16px !important;
 	overflow: hidden !important;
+  /* overflow bug fix for percent bar animation on ios safari  */
+  transform: translateZ(0) !important;
 }
 
 .i-amphtml-story-interactive-option {
